# OOP-F1-Simulation

./: LICENSE  README.md  pyproject.toml
src/: models.py  sim.py
