[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "f1-sim"
version = "0.1.0"
description = "Object-oriented F1 season simulator"
readme = "README.md"
authors = [{ name = "Your Name" }]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]